--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "paths": {
+    "@/*": ["./src/*"],
+  },
   "extends": "@repo/typescript-config/nextjs.json",
   "compilerOptions": {
     "plugins": [
