--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.299.0",
     "next": "^14.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chat-elements": "^12.0.11",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.2",
