--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,10 @@
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.11",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
