--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@prisma/client": "^5.7.0",
+        "dotenv": "^16.3.1",
         "ioredis": "^5.3.2",
         "kafkajs": "^2.2.4",
         "socket.io": "^4.7.2"
